--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "Michael.codes"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Michael Baldwin"
+description              : ""
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
@@ -54,7 +54,7 @@ social:
 analytics:
   provider               : false # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    tracking_id          : #UA-74989686-1
 
 # Google AdSense
 google_ad_client         :
@@ -63,10 +63,10 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Michael Baldwin"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "Software Engineer | Geek"
+  location         :
   email            :
   uri              :
   bitbucket        :
@@ -75,7 +75,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           :
+  github           : mkbaldwin
   google_plus      :
   keybase          :
   instagram        :
@@ -83,10 +83,10 @@ author:
   linkedin         :
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 614418/michael # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          :
+  twitter          : mkbaldwin21
   vine             :
   weibo            :
   xing             :
@@ -206,3 +206,20 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+################################################################################
+################################################################################
+################################################################################
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      permalink: /posts/:title/
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: fakse
+      share: true
+      related: true
