--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : #UA-74989686-1
+    tracking_id          : UA-74989686-1
 
 # Google AdSense
 google_ad_client         :
