--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,29 +3,29 @@
   publication: 2009 ACM Southeast Conference
   date: March 2009
   url: http://portal.acm.org/citation.cfm?doid=1566445.1566557
-  authors: Michael Baldwin
+  authors: Michael K. Baldwin
 
 - title: Annotating Digital Documents for Improved Search Results in a Document Repository
   type: Poster
   publication: 2008 Student Research Day, Tennessee Technological University
   date: April 2008
-  authors: Michael Baldwin
+  authors: Michael K. Baldwin
 
 - title: Utilizing Smart Cards for Authentication and Compliance Tracking in a Diabetes Case Management System
   type: Poster
   publication: 2008 ACM Southeast Conference
   date: March 2008
   url: http://doi.acm.org/10.1145/1593105.1593246
-  authors: Michael Baldwin, Brandon Malone
+  authors: Michael K. Baldwin, Brandon M. Malone
 
 - title: A Checklist for Requirement Defects Discovery in an Academic Environment
   type: Presentation
   publication: 2007 Fall Conference Mid-Southeast Chapter of the ACM
   date: November 2007
-  authors: Michael Baldwin
+  authors: Michael K. Baldwin
 
 - title: Requirement Defects Discovery and Analysis in an Academic Environment
   type: Poster
   publication: 2007 Student Research Day, Tennessee Technological University
   date: April 2007
-  authors: Michael Baldwin
+  authors: Michael K. Baldwin
