Tweaks to the wording on descriptions

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 - title: "xDOC: A System for XML Based Document Annotation and Searching"
   type: Paper
-  publication: 2009 ACM Southeast Conference
+  publication: 47th Annual ACM Southeast Regional Conference; Clemson, SC
   date: March 2009
   authors: Michael K. Baldwin
   links:
@@ -14,7 +14,7 @@
 
 - title: Annotating Digital Documents for Improved Search Results in a Document Repository
   type: Poster
-  publication: 2008 Student Research Day, Tennessee Technological University
+  publication: Tennessee Technological University Student Research Day; Cookeville, TN
   date: April 2008
   authors: Michael K. Baldwin
   links:
@@ -25,7 +25,7 @@
 
 - title: Utilizing Smart Cards for Authentication and Compliance Tracking in a Diabetes Case Management System
   type: Poster
-  publication: 2008 ACM Southeast Conference
+  publication: 46th Annual ACM Southeast Regional Conference; Auburn, AL
   date: March 2008
   authors: Michael K. Baldwin, Brandon M. Malone
   links:
@@ -39,7 +39,7 @@
 
 - title: A Checklist for Requirement Defects Discovery in an Academic Environment
   type: Presentation
-  publication: 2007 Fall Conference Mid-Southeast Chapter of the ACM
+  publication: 2007 Fall Conference Mid-Southeast Chapter of the ACM; Gatlinburg, TN
   date: November 2007
   authors: Michael K. Baldwin
   links:
@@ -54,7 +54,7 @@
 
 - title: Requirement Defects Discovery and Analysis in an Academic Environment
   type: Poster
-  publication: 2007 Student Research Day, Tennessee Technological University
+  publication: Tennessee Technological University Student Research Day; Cookeville, TN
   date: April 2007
   authors: Michael K. Baldwin
   links:
