Upgrade font awesome. Adding DEV.to link for profile.

--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,7 @@ author:
   weibo            :
   xing             :
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
+  dev_to           : mkbaldwin
 
 
 # Reading Files
