--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 - title: "xDOC: A System for XML Based Document Annotation and Searching"
   type: Paper
-  publication: 47th Annual ACM Southeast Regional Conference; Clemson, SC
+  publication: ACM Southeast Regional Conference; Clemson, SC
   date: March 2009
   authors: Michael K. Baldwin
   links:
@@ -25,7 +25,7 @@
 
 - title: Utilizing Smart Cards for Authentication and Compliance Tracking in a Diabetes Case Management System
   type: Poster
-  publication: 46th Annual ACM Southeast Regional Conference; Auburn, AL
+  publication: ACM Southeast Regional Conference; Auburn, AL
   date: March 2008
   authors: Michael K. Baldwin, Brandon M. Malone
   links:
@@ -39,7 +39,7 @@
 
 - title: A Checklist for Requirement Defects Discovery in an Academic Environment
   type: Presentation
-  publication: 2007 Fall Conference Mid-Southeast Chapter of the ACM; Gatlinburg, TN
+  publication: Fall Conference Mid-Southeast Chapter of the ACM; Gatlinburg, TN
   date: November 2007
   authors: Michael K. Baldwin
   links:
