Adding in a link to ORCID page as well as upgrading fontawesome

--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,7 @@ author:
   xing             :
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
   dev_to           : mkbaldwin
+  orcid            : 0000-0003-4798-8186
 
 
 # Reading Files
