--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-ua-4" # false (default), "google", "google-universal", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : G-YQZSZ582HB
 
