remove twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ author:
   stackoverflow    : 614418/michael # http://stackoverflow.com/users/123456/username
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : mkbaldwin21
+  twitter          : 
   vine             :
   weibo            :
   xing             :
