Removing twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : mkbaldwin21
+  username               : 
 facebook:
   username               :
   app_id                 :
