--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,7 @@ author:
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
   dev_to           : mkbaldwin
   orcid            : 0000-0003-4798-8186
+  mastodon         : https://hachyderm.io/@michaelcodes
 
 
 # Reading Files
