--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               : 
+  username               :
 facebook:
   username               :
   app_id                 :
@@ -124,7 +124,7 @@ author:
   stackoverflow    : 614418/michael # http://stackoverflow.com/users/123456/username
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : 
+  twitter          :
   vine             :
   weibo            :
   xing             :
@@ -136,6 +136,7 @@ author:
 
 # Reading Files
 include:
+  - .well-known
   - .htaccess
   - _pages
 exclude:
